--- a/style.css
+++ b/style.css
@@ -54,13 +54,14 @@ a {
     color: #E5E7EB;
 }
 
-.mainSignUp {
+.mainSignUp, .CTASignUp {
     border: none;
     border-radius: 8px;
-    padding: 6px 24px;
+    padding: 10px 42px;
     background-color: #3882F6;
     color: white;
     font-weight: bold;
+    font-size: 16px;
 }
 
 .placeHolderImg1 {
@@ -68,7 +69,8 @@ a {
   display: grid;
   place-items: center;
   font-size: 10px;
-  width: 800px;
+  width: 500px;
+  height: 250px;
   background-color: beige;
   color:black
 }
@@ -123,6 +125,10 @@ img {
     width: 900px;
 }
 
+.QuoteSpeaker, .Quote {
+    margin: 0px;
+}
+
 .Quote {
     font-size: 36px;
     font-style: italic;
@@ -135,4 +141,49 @@ img {
     font-weight: bold;
     font-size: 30px;
     text-align: right;
+}
+
+/* Call to Action */
+.CTAsection {
+    display: flex;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+.CTAcontainer {
+    background-color: #3882F6;
+    display: flex;
+    width: 800px;
+    height: 125px;
+    border: none;
+    border-radius: 12px;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0px 20px 0px 20px;
+}
+
+.CTAtext {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.Inquire, .CTAinstruction {
+    margin: 0;
+    font-family: Roboto;
+}
+
+.Inquire {
+    color: white;
+    font-size: 24px;
+}
+
+.CTAinstruction {
+    color: #E5E7EB;
+    font-size: 20px;
+}
+
+.CTASignUp {
+    border: 2px solid white;
 }
